Setup database migration process

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ DATABASE_PORT=5432
 DATABASE_NAME=include_users
 DATABASE_USER=include
 DATABASE_PASSWORD=include-password
+DATABASE_URL=postgres://include:include-password@localhost:5432/include_users
