--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
         "test": "jest --silent"
     },
     "dependencies": {
+        "@types/pg-format": "^1.0.2",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "http-status-codes": "^2.1.4",
         "keycloak-connect": "^15.0.2",
         "node-pg-migrate": "^6.0.0",
-        "pg": "^8.7.1"
+        "pg": "^8.7.1",
+        "pg-format": "^1.0.4"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
