--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "lint": "eslint . --ext .ts",
         "lint:fix": "eslint . --ext .ts --fix",
         "migrate": "node-pg-migrate",
-        "start": "node ./dist/src/index.js",
+        "dev": "nodemon",
+        "start": "ts-node ./src/index.ts",
         "start:prd": "npm run migrate up; node ./dist/src/index.js",
         "test": "jest --silent"
     },
@@ -40,9 +41,11 @@
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "jest": "^27.4.3",
         "jsonwebtoken": "^8.5.1",
+        "nodemon": "^2.0.15",
         "prettier": "^2.5.0",
         "supertest": "^6.1.6",
         "ts-jest": "^27.0.7",
+        "ts-node": "^10.4.0",
         "typescript": "^4.5.2"
     }
 }
