--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "http-errors": "^1.7.2",
         "http-status-codes": "^2.1.4",
         "keycloak-connect": "^15.0.2",
         "node-pg-migrate": "^6.0.0",
@@ -30,6 +31,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/http-errors": "^1.8.1",
         "@types/jest": "^27.0.3",
         "@types/jsonwebtoken": "^8.5.6",
         "@types/node": "^16.11.11",
