--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@types/pg-format": "^1.0.2",
+        "@types/validator": "^13.7.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
@@ -30,7 +31,8 @@
         "keycloak-connect": "^15.0.2",
         "node-pg-migrate": "^6.0.0",
         "pg": "^8.7.1",
-        "pg-format": "^1.0.4"
+        "pg-format": "^1.0.4",
+        "sequelize": "^6.14.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
@@ -38,7 +40,7 @@
         "@types/http-errors": "^1.8.1",
         "@types/jest": "^27.0.3",
         "@types/jsonwebtoken": "^8.5.6",
-        "@types/node": "^16.11.11",
+        "@types/node": "^16.11.21",
         "@types/pg": "^8.6.1",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.5.0",
@@ -51,6 +53,7 @@
         "jsonwebtoken": "^8.5.1",
         "nodemon": "^2.0.15",
         "prettier": "^2.5.0",
+        "sequelize-cli": "^6.4.1",
         "supertest": "^6.1.6",
         "ts-jest": "^27.0.7",
         "ts-node": "^10.4.0",
