--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,8 @@
                 "ignoreComments": true
             }
         ],
+        "no-explicit-any": "off",
+        "@typescript-eslint/no-explicit-any": "off",
         "no-console": ["error", { "allow": ["warn", "error"] }],
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
@@ -39,4 +41,3 @@
         "simple-import-sort/imports": "error"
     }
 }
-  
