feat: CLIN-1054 make the service agnostic

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ KEYCLOAK_CLIENT=
 # PostgreSQL DB configuration
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_NAME=include_users
-DATABASE_USER=include
-DATABASE_PASSWORD=include-password
-DATABASE_URL=postgres://include:include-password@localhost:5432/include_users
+DATABASE_NAME=users
+DATABASE_USER=postgres
+DATABASE_PASSWORD=password
+DATABASE_URL=postgres://postgres:password@localhost:5432/users
