--- a/.github/workflows/publish_with_sha.yml
+++ b/.github/workflows/publish_with_sha.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           username: ${{ secrets.FERLAB_DOCKER_HUB_USER }}
           password: ${{ secrets.FERLAB_DOCKER_HUB_TOKEN }}
-          image: ferlabcrsj/include-users-api
+          image: ferlabcrsj/users-api
           tag_format: "{sha}-{timestamp}"
