fix: CLIN-1054 fix migrate command unable to handle certificate

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "clean": "rm -rf ./dist/* ",
         "lint": "eslint . --ext .ts",
         "lint:fix": "eslint . --ext .ts --fix",
-        "migrate": "node-pg-migrate",
+        "migrate": "NODE_TLS_REJECT_UNAUTHORIZED=0 node-pg-migrate",
         "dev": "nodemon",
         "start": "ts-node ./src/index.ts",
-        "start:prd": "npm run migrate up --reject-unauthorized=0; node ./dist/src/index.js",
+        "start:prd": "npm run migrate up && node ./dist/src/index.js",
         "test": "jest --silent"
     },
     "dependencies": {
