:lipstick: Improve README and .env.example files

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,8 @@
-# Default to port 1212
-PORT=
-
-# Keycloak configuration
-KEYCLOAK_URL=
-KEYCLOAK_REALM=
-KEYCLOAK_CLIENT=
-
-# PostgreSQL DB configuration
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=users
-DATABASE_USER=postgres
-DATABASE_PASSWORD=password
-DATABASE_URL=postgres://postgres:password@localhost:5432/users
+KEYCLOAK_URL=https://kf-keycloak-qa.kf-strides.org/auth
+KEYCLOAK_REALM=kidsfirstdrc
+KEYCLOAK_CLIENT=portal-ui
+PGHOST=db
+PGPORT=5432
+PGDATABASE=users
+PGUSER=postgres
+PGPASSWORD=password
