:wrench: Prepare repo to sync with upstream

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-KEYCLOAK_URL=https://kf-keycloak-qa.kf-strides.org/auth
-KEYCLOAK_REALM=kidsfirstdrc
-KEYCLOAK_CLIENT=portal-ui
-PGHOST=db
-PGPORT=5432
-PGDATABASE=users
-PGUSER=postgres
-PGPASSWORD=password
+KEYCLOAK_URL=
+KEYCLOAK_REALM=
+KEYCLOAK_CLIENT=
+PGHOST=
+PGPORT=
+PGDATABASE=
+PGUSER=
+PGPASSWORD=
